[tool.poetry]
name = "activity03-tests"
version = "0.1.0"
description = ""
authors = ["Janyl Jumadinova <jjumadinova@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
# TODO: Define a test task to run tests with statement and branch coverages and missing line numbers
